# xinyun

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: architecture.md  project-structure.md
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/src/ai/: minimax.rs  mod.rs
rust-core/src/game/: effects.rs  mod.rs  rules.rs  state.rs
rust-core/src/utils/: mod.rs
scripts/: README.md  dev-wasm.sh
src/: main.tsx  styles.css
src/canvas/: Camera2D.ts  GameCanvasBridge.ts  README.md  Renderer.ts  Scene.ts  index.ts
src/canvas/animation/: AnimationSystem.ts  Composite.ts  Delay.ts  Queue.ts  Tween.ts  easing.ts  index.ts  math.ts  types.ts
src/canvas/card/: CardRenderer.ts  layouts.ts  types.ts
src/canvas/fx/: CardAnimations.ts  EffectComposer.ts  ParticleSystem.ts  ScreenEffects.ts  UIEffects.ts  index.ts
src/components/: ActionPanel.tsx  App.tsx  CardSummary.tsx  EventDebugger.tsx  GameBoard.tsx  GameLog.tsx  LoadingScreen.tsx  PlayerInfo.tsx  README.md
src/data/: cards.ts  decks.ts  levels.ts  scenarios.ts
src/debug/: DebugOverlay.tsx  index.ts
src/events/: EventBus.ts  GameEvents.ts
src/hooks/: README.md  useEventLog.ts  useGamePersistence.ts  useGameState.ts  useLocalStorage.ts  useWasm.ts
src/pages/: GamePage.tsx  LevelSelectPage.tsx  MainMenuPage.tsx  ResultsPage.tsx  SettingsPage.tsx
src/types/: README.md  domain.ts  wasm.d.ts
src/utils/: performance.ts  persistence.ts
src/wasm/: GameEngineService.ts  README.md  index.ts  moduleLoader.ts
