[package]
name = "wasm_game"
version = "0.1.0"
edition = "2021"
description = "Rust → WebAssembly sandbox with hot reload support."
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = { version = "0.8", features = ["std", "small_rng"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.2", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.dev]
debug = true
opt-level = 1

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
